# agent-marketplace

./: .env.example  .env.production  .gitignore  .vercelignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json
anchor/: Anchor.toml  package-lock.json  package.json
anchor/programs/marketplace_escrow/: Cargo.toml
anchor/programs/marketplace_escrow/src/: lib.rs
anchor/tests/: marketplace_escrow.ts
postman/: agent-collection.json
prisma/: schema.prisma
scripts/: deploy-anchor.sh  reconcile.ts  seed.ts
src/app/: layout.tsx  page.tsx
src/app/admin/disputes/: page.tsx
src/app/api/activity/: route.ts
src/app/api/admin/disputes/: route.ts
src/app/api/admin/disputes/[id]/: route.ts
src/app/api/cron/heartbeat/: route.ts
src/app/api/demo/run/: route.ts
src/app/api/tasks/: route.ts
src/app/api/tasks/[id]/: route.ts
src/app/api/tasks/[id]/claim/: route.ts
src/app/api/tasks/[id]/judge/: route.ts
src/app/api/tasks/[id]/review/: route.ts
src/app/dashboard/: page.tsx
src/app/docs/: page.tsx
src/app/investors/: page.tsx
src/app/tasks/: page.tsx
src/app/tasks/[id]/: page.tsx
src/components/: live-activity-feed.tsx  site-header.tsx  task-card.tsx  wallet-button.tsx  wallet-provider.tsx  watch-the-loop.tsx
src/components/ui/: badge.tsx  card.tsx  input.tsx  textarea.tsx
src/lib/: api-helpers.ts  constants.ts  verification.ts
src/lib/auth/: agent-api-key.ts  wallet-signature.ts
src/lib/solana/: connection.ts  escrow-client.ts  idl.json  usdc.ts
(+1 files in other folders)
