[package]
name = "marketplace_escrow"
version = "0.1.0"
description = "Per-task USDC escrow for the agent-native freelancer marketplace"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "marketplace_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
